--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "UDAY KUMAR POOJARI"
 title_separator          : "-"
 name                     : &name "UDAY KUMAR POOJARI"
 description              : &description "Softare Developer with handsful product development experience in Automotive Domain"
-url                      : https://udaypoojari.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "udaypoojari/udaykumarpoojari.github.io"
 
@@ -29,7 +29,13 @@ author:
   uri              : # URL
   email            : "udaykumar405@gmail.com" 
 
-
+  # Academic websites
+  arxiv            : # URL - Update with the correct link to your profile
+  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  impactstory      : # URL
+  orcid            : "http://orcid.org/yourorcidurl"
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
